Fix attachments not being considered exports